invertedPlaceholderImg fixed fonts product detail align right edit btn etim tooltip icon

--- a/src/app/components/product-details/product-details.component.css
+++ b/src/app/components/product-details/product-details.component.css
@@ -32,6 +32,17 @@
   height:auto;
   min-height: 20px;
 }
+.mat-column-action {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 30px !important;
+  width: 30px !important;
+  text-align: end;
+}
+
+th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
+  padding-right: 16px;
+}
 
 td, th, .mat-line {
   white-space: normal;
@@ -50,13 +61,21 @@ tr.mat-row {
   word-wrap: break-word;
   white-space: pre-wrap;
 }
-
+::ng-deep.mat-tab-label-active{
+  opacity: 1.0!important;
+}
 .card {
   margin-top: 15px;
   margin-left: 20px;
 }
 
 .modifH2{
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
   font-weight: bold;
   color:rgba(0,0,0,.54)
 }
